Fix spacing of text lines in a note block

--- a/sass/blocks/_purple-note.sass
+++ b/sass/blocks/_purple-note.sass
@@ -163,8 +163,8 @@ $block: ".purple-note"
     #{$block}_color_accent-yellow &
       color: $c-text-primary
 
-    &:not(:last-child)
-      margin-bottom: 5px
+    & ~ &
+      margin-top: 5px
 
 
   // $Note text bold
